samples/_failures_safe/1761129364_039d7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57cfb08b.c: In function ‘main’:
./samples/SAFE/__tmp_57cfb08b.c:154:5: error: expected expression at end of input
  154 |     size_t len =
      |     ^~~~~~
./samples/SAFE/__tmp_57cfb08b.c:154:5: error: expected declaration or statement at end of input
